# Bear-Detector

./: .dockerignore  .gitignore  Bear_detection.ipynb  Dockerfile  README.md  apply_refactor.py  apply_refactor_fixed.py  apply_remaining.py  fix.py  pyproject.toml  requirements.txt
Bear detection.v3i.yolov8-obb/: README.dataset.txt  README.roboflow.txt  data.yaml
Bear detection.v3i.yolov8-obb/test/labels/: 039_071307_010_28689597617_o_jpg.rf.46052ae27763ae9608c450c26dda36a2.txt  039_071307_03_43577088061_o_jpg.rf.cadfb913c1d1f9b0b8808435a112bf77.txt  039_071412_18_28689263937_o_jpg.rf.5f4db373e06734a0763e5c91777e2fe1.txt  039_071412_37_42671557495_o_jpg.rf.d2f817995b15c96ee4e9f1f0be52cb38.txt  039_102214_14_42859010294_o_jpg.rf.4deaaaca94d2d6dca0dce6305338c8d7.txt  153_-071410_11_28689863187_o_jpg.rf.bf39b3123c00ccfb8239d73ed19528fb.txt  153_062513_1_29706456788_o_jpg.rf.e9ab7b9adf20459cefc36debafb66129.txt  (+153 more)
config/: default.yaml  detection_finetune.yaml
notebooks/: Bear_Detector_Colab.ipynb  Bear_detection.ipynb
outputs/metrics/: detection_evaluation.json
scripts/: evaluate.py  infer_image.py  infer_video.py  train_detection.py  train_segmentation.py
src/: __init__.py
src/bear_detector/: __init__.py  classification.py  config.py  detection.py  utils.py
src/datasets/: __init__.py  classification_dataset.py  detection_dataset.py
src/inference/: __init__.py  classifier.py  detector.py
src/segmentation/: __init__.py  dataset.py  infer_segmentation.py  train_segmentation.py
src/tracking/: __init__.py  metrics.py  sort_tracker.py
src/training/: __init__.py  evaluate.py  experiment_tracker.py  train_classification.py  train_detection.py
src/utils/: __init__.py  config.py  device.py  logging.py  seed.py  visualization.py
tests/: __init__.py  conftest.py  test_config.py  test_datasets.py  test_evaluation.py  test_seed.py  test_segmentation_dataset.py  test_tracking.py  test_visualization.py
(+959 files in other folders)
